--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   jpa:
     hibernate:
-     ddl-auto: create-drop
+      ddl-auto: none
     database: postgresql
     show-sql: true
 
@@ -13,3 +13,4 @@ spring:
     username: postgres
     password: 1234
     driver-class-name: org.postgresql.Driver
+    initialization-mode: always
