--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  servlet:
-    context-path: /api
 spring:
   jpa:
     hibernate:
@@ -14,3 +11,9 @@ spring:
     password: 1234
     driver-class-name: org.postgresql.Driver
     initialization-mode: always
+#  datasource:
+#    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#    username: ${DB_USER}
+#    password: ${DB_PASSWORD}
+#    platform: postgres
+#    driver-class-name: org.postgresql.Driver
