--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,15 @@ spring:
     database: postgresql
     show-sql: true
 
-  datasource:
-    url: jdbc:postgresql://localhost:5431/postgres
-    username: postgres
-    password: 1234
-    driver-class-name: org.postgresql.Driver
-    initialization-mode: always
 #  datasource:
-#    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#    username: ${DB_USER}
-#    password: ${DB_PASSWORD}
-#    platform: postgres
+#    url: jdbc:postgresql://localhost:5431/postgres
+#    username: postgres
+#    password: 1234
 #    driver-class-name: org.postgresql.Driver
+#    initialization-mode: always
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    platform: postgres
+    driver-class-name: org.postgresql.Driver
