--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: compose-api
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.multi
     ports:
       - 8080:8080
     environment:
