--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,16 +1,18 @@
+server:
+  error:
+    include-message: always
+  servlet:
+    context-path: /api
+  port: 8080
+
 spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
     database: postgresql
     show-sql: true
+    generate-ddl: true
 
-#  datasource:
-#    url: jdbc:postgresql://localhost:5431/postgres
-#    username: postgres
-#    password: 1234
-#    driver-class-name: org.postgresql.Driver
-#    initialization-mode: always
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
