--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   db:
-    container_name: postgres_db
+    container_name: postgres_db_posts
     image: postgres:13
     ports:
       - 5431:5432
@@ -14,17 +14,17 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   api:
-    container_name: compose-api
+    container_name: spring_api_posts
     build:
       context: .
       dockerfile: Dockerfile.multi
     ports:
-      - 8080:8080
+      - 8081:8080
     environment:
       DB_USER: postgres
       DB_PASSWORD: 1234
       DB_NAME: postgres
-      DB_HOST: postgres_db
+      DB_HOST: postgres_db_posts
       DB_PORT: 5432
 
 volumes:
