--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -1,8 +1,19 @@
 FROM gradle:7.0-jdk11 AS build
 
-COPY . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle assemble
+
+# Only copy dependency-related files
+COPY build.gradle.kts settings.gradle.kts /home/gradle/src/
+
+# Only download dependencies
+# Eat the expected build failure since no source code has been copied yet
+RUN gradle clean build --no-daemon > /dev/null 2>&1 || true
+
+# Copy all files
+COPY ./ /home/gradle/src/
+
+# Do the actual build
+RUN gradle clean build --no-daemon
 
 FROM openjdk:11-jre-slim
 
