trying docker publish develop

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -17,8 +17,8 @@ spring:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
-    platform: postgres
     driver-class-name: org.postgresql.Driver
+    initialization-mode: always
 
 AUTH_PORT: 8080
 AUTH_HOST: localhost
