--- a/.github/workflows/docker-publish_prod.yml
+++ b/.github/workflows/docker-publish_prod.yml
@@ -58,7 +58,7 @@ jobs:
         uses: appleboy/ssh-action@master
         env:
           REPO_OWNER: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.VM_GITHUB_TOKEN }}
         with:
           username: ${{ secrets.VM_USERNAME }}
           host: ${{ secrets.VM_PUBLIC_IP_PROD }}
@@ -73,5 +73,4 @@ jobs:
             sudo docker rm $(sudo docker ps -a -q)
             sudo docker rmi $(sudo docker images -q)
             sudo docker login docker.pkg.github.com --username $REPO_OWNER --password $GITHUB_TOKEN
-            sudo docker-compose -f docker-compose.prod.vm.yml pull
-            sudo docker-compose -f docker-compose.prod.vm.yml up -d --build
+            sudo docker-compose -f docker-compose.dev.vm.yml up -d --force-recreate --build
