--- a/.github/workflows/docker-publish_prod.yml
+++ b/.github/workflows/docker-publish_prod.yml
@@ -66,11 +66,11 @@ jobs:
           envs: REPO_OWNER, GITHUB_TOKEN
           script: |
             cd jib-jab-infra
-            sudo git checkout origin/without-cert-bot
+            sudo git checkout develop
             sudo git pull
             sudo aa-remove-unknown
             sudo docker container kill $(sudo docker ps -q)
             sudo docker rm $(sudo docker ps -a -q)
             sudo docker rmi $(sudo docker images -q)
             sudo docker login docker.pkg.github.com --username $REPO_OWNER --password $GITHUB_TOKEN
-            sudo docker-compose -f docker-compose.dev.vm.yml up -d --force-recreate --build
+            sudo docker-compose -f docker-compose.prod.vm.yml up -d --force-recreate --build
